# PolyCompetition

Pointers website/: README.md  index.html  package-lock.json  package.json
Pointers website/src/: App.jsx  index.css
Pointers website/src/components/: CodeExample.jsx  ComparisonSection.jsx  Footer.jsx  Header.jsx  Hero.jsx  PointerSection.jsx  Quiz.jsx  ReferenceSection.jsx
challenge-jeu-video/: README.md  audio.js  collisions.js  config.js  entities.js  game.js  gameState.js  index.html  player.js  spawn.js  style.css  ui.js  utils.js
challenge-opengl/: .gitignore  CMakeLists.txt  Dockerfile  README.md  camera.cpp  camera.h  docker-compose.yml  geometry.cpp  geometry.h  main.cpp  shader.cpp  shader.h
challenge-opengl/shaders/: fragment.glsl  vertex.glsl
challenge-polyai-smartsort/: README.md
challenge-polyai-smartsort/backend/: .env  .gitignore  app.py  requirements.txt  test_api.py
challenge-polyai-smartsort/backend/models/: database.py  ml_model.py
challenge-polyai-smartsort/backend/utils/: image_processing.py  mongodb_starter.py  text_processing.py
challenge-polyai-smartsort/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
challenge-polyai-smartsort/frontend/src/: App.jsx
challenge-polyai-smartsort/frontend/src/components/: History.jsx  ImageUpload.jsx  Results.jsx  Stats.jsx  TextInput.jsx
challenge-polyai-smartsort/frontend/src/services/: api.js
challenge-polyai-smartsort/ml-model/: requirements.txt  test_model.py  train_image_model.py  train_text_model.py
challenge-polyai-smartsort/ml-model/logs/train/: events.out.tfevents.1763505661.DESKTOP-30P4BIA.28344.0.v2
challenge-polyai-smartsort/ml-model/models/: text_vectorizer.pkl  waste_classifier_text.pkl
fibonnaci/: fib.pas
(+1 files in other folders)
